# 3821B1PM3-Lab-1-Rear-Officers-Polynomials

./: CMakeLists.txt  README.md  replit.nix
.ccls-cache/@@home@runner@3821B1PM3-Lab-1-Rear-Officers-Polynomials/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cpp_type_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_forced.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@cxxabi_init_exception.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@exception.h.blob  (+163 more)
Polynomials/: CMakeLists.txt
lib/: CMakeLists.txt
lib/AEL/: CMakeLists.txt
lib/ArithmExpressionsLib/: ArithmeticExpression.h
lib/ListsLib/: CMakeLists.txt
lib/MML/: ArithmeticExpression.cpp  CMakeLists.txt  Map.h  Str.cpp  Str.h  item.h  sorted_map.h
lib/ParseLib/: CMakeLists.txt
lib/StackLib/: CMakeLists.txt  Stack.h
test/: CMakeLists.txt  test_rofl.cpp
(+6 files in other folders)
